--- a/SpringBoot/src/main/resources/application.yml
+++ b/SpringBoot/src/main/resources/application.yml
@@ -24,5 +24,9 @@ spring:
               maxPoolPreparedStatementPerConnectionSize: 20
               useGlobalDataSourceStat: true
               connectionProperties: druid.stat.mergeSql=true,druid.stat.slowSqlMills=500
-
+       servlet:
+         multipart:
+                enabled: true
+                max-file-size: 200MB
+                max-request-size: 200MB
 msg: hello world!
